Them man hinh detail pizza

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_map">Map</string>
     <string name="title_orders">Orders</string>
     <string name="title_profile">Profile</string>
+    <string name="dang_ky">Đăng ký</string>
 </resources>
